# pylua

./: .gitignore  CMakeLists.txt  GITHUB_REPO_PROFILE.md  LICENSE  LUNARA_GUIDE.md  LUNARA_KURULUM_VE_KULLANIM_REHBERI.md  LUNARA_NEXT_STEPS.md  PYLUA_GUIDE.md  PYLUA_KURULUM_VE_KULLANIM_REHBERI.md  README.md  SQLUNA_EXECUTION_PROMPT.md
examples/: analyzer_generic_type_error_demo.lunara  analyzer_type_error_demo.lunara  auth_backend.lunara  auth_backend_smoke_test.ps1  catalog.lunara  catalog.pylua  core_expansion_smoke_test.ps1  dsp_demo.lunara  ecommerce_backend.lunara  ecommerce_backend_smoke_test.ps1  fastapi_style_backend.lunara  fastapi_style_backend_smoke_test.ps1  full_web_backend.lunara  full_web_backend_smoke_test.ps1  hello.lunara  hello.pylua  language_core_upgrade_demo.lunara  match_destructuring_generics_demo.lunara  parser_expansion_demo.lunara  parser_recovery_demo.lunara  pattern_match_defer_demo.lunara  platform_demo.lunara  router_demo.lunara  router_demo.pylua  vm_data_demo.pylua  vm_demo.pylua  web_backend_demo.lunara  web_backend_demo.pylua
examples/auth_backend_site/: app.js  index.html
examples/fastapi_style_site/: index.html
examples/full_web_backend_site/: app.js  index.html
examples/lib/: catalog_helpers.lunara  catalog_helpers.pylua
examples/live_bridge_demo/: README.md  api_server.lunara  frontend_server.lunara  smoke_test.ps1  websocket_server.lunara
examples/live_bridge_demo/site/: app.js  index.html  lunara_bridge.js  styles.css
examples/package_demo/: lunara.toml
examples/package_demo/src/: catalog.lunara  main.lunara
examples/package_registry_demo/: lunara.toml
examples/package_registry_demo/.lunara/registry/mailers/1.0.0/src/: templates.lunara
examples/package_registry_demo/src/: catalog.lunara  main.lunara
include/lunara/: analyzer.hpp  ast.hpp  bytecode.hpp  engine.hpp  interpreter.hpp  lexer.hpp  lunara_c.h  parser.hpp  runtime.hpp  token.hpp  vm.hpp
include/pylua/: ast.hpp  bytecode.hpp  engine.hpp  interpreter.hpp  lexer.hpp  parser.hpp  pylua_c.h  runtime.hpp  token.hpp  vm.hpp
packaging/linux/: README.md  install_ubuntu.sh
packaging/windows/: LICENSE.txt  README.md  create_installer.ps1  install.cmd  install.ps1  uninstall.cmd  uninstall.ps1
python/: backend_demo.py  embed_demo.py  lunara_bridge.py  lunara_embed_ctypes.py  pylua_bridge.py  pylua_embed_ctypes.py
sqluna/: sqluna.h
sqluna/core/config/: config.cpp  config.h
sqluna/core/connection/: connection.cpp  connection.h
sqluna/core/pool/: connection_pool.cpp  connection_pool.h
sqluna/demo/: main.cpp
sqluna/driver/sqlite/: sqlite_api.cpp  sqlite_api.h  sqlite_connection.cpp  sqlite_connection.h
sqluna/orm/mapper/: mapper.h
sqluna/orm/model/: model.h
sqluna/orm/schema/: migration.cpp  migration.h
sqluna/query/ast/: query_ast.h
sqluna/query/builder/: query_builder.cpp  query_builder.h
sqluna/query/compiler/: sql_compiler.cpp  sql_compiler.h
sqluna/security/encryption/: field_encryption.cpp  field_encryption.h
sqluna/security/sanitizer/: input_sanitizer.cpp  input_sanitizer.h
sqluna/utils/error/: error.h
sqluna/utils/logger/: logger.cpp  logger.h
src/: analyzer.cpp  engine.cpp  interpreter.cpp  lexer.cpp  lunara_c.cpp  main.cpp  parser.cpp  pylua_c.cpp  vm.cpp
website/: README.md  build_site.lunara  build_site.pylua  serve_site.pylua
website/lib/: site_content.pylua
